--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ ICLR’22</p>
 Y. Zhang, Y. Yao, J. Jia, J. Yi, M. Hong, S. Chang, <b>S. Liu</b><br />
 ICLR’22</p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2006.14748.pdf">Proper Network Interpretability Helps Adversarial Robustness in Classification</a> <br />
-A. Boopathy, <b>S. Liu</b>, G. Zhang, C. Liu, P.-Y. Chen, S. Chang, L. Daniel <br />
-ICML’20</p>
+<li><p>Model Sparsity Can Simplify Machine Unlearning <br /> 
+J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b> <br />
+NeurIPS&rsquo;23</p>
 </li>
 </ol>
 <ul>
@@ -169,7 +169,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-18 09:33:50 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-18 09:37:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
