--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,9 @@
 <h2>Preprints</h2>
 <p>* represents equal contribution</p>
 <ol>
-<li><p>Y. Zhang*, J. Jia*, X. Chen, A. Chen, Y. Zhang, J. Liu, K. Ding, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2310.11868">&ldquo;To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now&rdquo;</a></p>
+<li><p>Y. Zhang*, J. Jia*, X. Chen, A. Chen, Y. Zhang, J. Liu, K. Ding, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2310.11868">To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now</a></p>
+</li>
+<li><p>C. Fan, J. Liu, Y. Zhang, D. Wei, E. Wong, <b>S. Liu</b> <a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a></p>
 </li>
 <li><p>A. Chen*, Y. Zhang*, J. Jia, J. Diffenderfer, J. Liu, K. Parasyris, Y. Zhang, Z. Zhang, B. Kailkhura, <b>S. Liu</b>, <a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a></p>
 </li>
