--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@ I intend to seek a new learning frontier when the current learning algorithms be
 </li>
 </ul>
 <ol>
+<li><p><a href="https://arxiv.org/abs/2308.10110v1">Robust Mixture-of-Expert Training for Convolutional Neural Networks</a> <br />
+Y. Zhang, R. Cai, T. Chen, G. Zhang, H. Zhang, P.-Y. Chen, S. Chang, Z. Wang, <b>S. Liu</b> <br />
+ICCV&rsquo;23</p>
+</li>
+<li><p>Model Sparsity Can Simplify Machine Unlearning <br /> 
+J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b> <br />
+NeurIPS&rsquo;23</p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2211.11635">Understanding and Improving Visual Prompting: A Label-Mapping Perspective</a> <br />
 A. Chen, Y. Yao, P.-Y. Chen, Y. Zhang, <b>S. Liu</b> <br />
 CVPR&rsquo;23</p>
@@ -75,17 +83,9 @@ CVPR&rsquo;23</p>
 Y. Zhang*, G. Zhang*, P. Khanduri, M. Hong, S. Chang, <b>S. Liu</b> (* Equal contribution) <br /> 
 ICML’22</p>
 </li>
-<li><p><a href="https://openreview.net/pdf?id=gpp7cf0xdfN">Reverse Engineering of Imperceptible Adversarial Image Perturbations</a> <br /> 
-Y. Gong*, Y. Yao*, Y. Li, Y. Zhang, X. Liu, X. Lin, <b>S. Liu</b> <br /> 
-ICLR’22</p>
-</li>
 <li><p><a href="https://openreview.net/pdf?id=W9G_ImpHlQd">How to Robustify Black-Box ML Models? A Zeroth-Order Optimization Perspective</a><br />
 Y. Zhang, Y. Yao, J. Jia, J. Yi, M. Hong, S. Chang, <b>S. Liu</b><br />
 ICLR’22</p>
-</li>
-<li><p>Model Sparsity Can Simplify Machine Unlearning <br /> 
-J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b> <br />
-NeurIPS&rsquo;23</p>
 </li>
 </ol>
 <ul>
@@ -93,13 +93,17 @@ NeurIPS&rsquo;23</p>
 </li>
 </ul>
 <ol>
-<li><p><a href="https://arxiv.org/pdf/2210.04092.pdf">Advancing Model Pruning via Bi-level Optimization</a> <br />
-Y. Zhang*, Y. Yao*, P. Ram, P. Zhao, T. Chen, M. Hong, Y. Wang, <b>S. Liu</b> <br />
-NeurIPS’22</p>
+<li><p><a href="https://arxiv.org/abs/2310.08782">Selectivity Drives Productivity: Efficient Dataset Pruning for Enhanced Transfer Learning</a> <br />
+Y. Zhang*, Y. Zhang*, Aochuan Chen*, J. Jia, J. Liu, G. Liu, M. Hong, S. Chang, <b>S Liu</b> <br /> 
+NeurIPS&rsquo;23</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2206.06257.pdf">Distributed Adversarial Training to Robustify Deep Neural Networks at Scale</a> <br />
 G. Zhang*, S. Lu*, Y. Zhang, X. Chen, P.-Y. Chen, Q. Fan, L. Martie, L. Horesh, M. Hong, <b>S. Liu</b> <br />
 UAI’22 (Best Paper Runner-Up Award)</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2210.04092.pdf">Advancing Model Pruning via Bi-level Optimization</a> <br />
+Y. Zhang*, Y. Yao*, P. Ram, P. Zhao, T. Chen, M. Hong, Y. Wang, <b>S. Liu</b> <br />
+NeurIPS’22</p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/1909.13806.pdf">Min-Max Optimization without Gradients: Convergence and Applications to Adversarial ML</a> <br />
 <b>S. Liu</b>, S. Lu, X. Chen, Y. Feng, K. Xu, A. Al-Dujaili, M. Hong, U.-M. O'Reilly <br />
@@ -108,10 +112,6 @@ ICML’20</p>
 <li><p><a href="https://arxiv.org/pdf/2006.06224.pdf">A Primer on Zeroth-Order Optimization in Signal Processing and Machine Learning</a> <br />
 <b>S. Liu</b>, P.-Y. Chen, B. Kailkhura, G. Zhang, A. O. Hero, P. K. Varshney <br />
 IEEE Signal Processing Magazine, 2020</p>
-</li>
-<li><p><a href="https://arxiv.org/pdf/1905.00424.pdf">An ADMM Based Framework for AutoML Pipeline Configuration</a> <br />
-<b>S. Liu</b>*, P. Ram*, D. Vijaykeerthy, D. Bouneffouf, G. Bramble, H. Samulowitz, D. Wang, A. Conn, A. Gray <br /> 
-AAAI’20</p>
 </li>
 </ol>
 <h2>News</h2>
@@ -169,7 +169,7 @@ AAAI’20</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-21 17:37:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-22 06:48:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
