--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ IEEE Signal Processing Magazine, 2020</p>
 </li>
 </ol>
 <h2>News</h2>
-<p>* <b>[New Preprints]</b> We are pleased to announce the release of the following papers on arXiv:<br /><a href="https://arxiv.org/abs/2310.11868">To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now</a>; <br /><a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a>; <br /><a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a>.</p>
+<p>* <b>[New Preprints]</b> We are pleased to announce the release of the following papers on arXiv:<br /> [1]<a href="https://arxiv.org/abs/2310.11868">To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now</a>; [2]<a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a>; [3]<a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a>.</p>
 <p>* NeurIPS 2023: 3 Papers Accepted – 1 Spotlight and 2 Posters. Congratulations to Jignhan, Jiancheng, and Yuguang for their spotlight acceptance with 'Model Sparsity Simplifies Machine Unlearning.&rsquo; And kudos to Yihua, Yimeng, Aochuan, Jinghan, and Jiancheng for their poster acceptance with 'Selectivity Boosts Transfer Learning Efficiency.&rsquo;</p>
 <p>* Grateful to receive a grant from Army Research Office (ARO) as the PI.</p>
 <p>* Our paper on <a href="https://arxiv.org/abs/2308.10110v1">Adversarial Training for MoE</a> has been chosen for an Oral Presentation at <a href="https://iccv2023.thecvf.com">ICCV&rsquo;23</a>.</p>
@@ -169,7 +169,7 @@ IEEE Signal Processing Magazine, 2020</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-22 06:48:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-22 06:50:38 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
