--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ I intend to seek a new learning frontier when the current learning algorithms be
 Y. Zhang, R. Cai, T. Chen, G. Zhang, H. Zhang, P.-Y. Chen, S. Chang, Z. Wang, <b>S. Liu</b> <br />
 ICCV&rsquo;23</p>
 </li>
-<li><p>Model Sparsity Can Simplify Machine Unlearning <br /> 
+<li><p><a href="https://arxiv.org/abs/2304.04934">Model Sparsity Can Simplify Machine Unlearning</a> <br /> 
 J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b> <br />
 NeurIPS&rsquo;23</p>
 </li>
@@ -170,7 +170,7 @@ IEEE Signal Processing Magazine, 2020</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-25 06:28:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-03 08:09:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
