--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,8 @@
 </li>
 <li><p>A. Chen*, Y. Zhang*, J. Jia, J. Diffenderfer, J. Liu, K. Parasyris, Y. Zhang, Z. Zhang, B. Kailkhura, <b>S. Liu</b>, <a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a></p>
 </li>
+<li><p>Z. Pan,⋆ Y. Yao, G. Liu, B. Shen, H.V. Zhao, R.R. Kompella, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2311.02373v1.pdf">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a></p>
+</li>
 </ol>
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
