--- a/talk.html
+++ b/talk.html
@@ -29,6 +29,8 @@
 </div>
 <h2>Tutorial talks </h2>
 <ul>
+<li><p><a href="https://2023.ieeemlsp.org/tutorials/">Bi-Level Optimization In Signal Processing And Machine Learning: Foundations And Emerging Applications</a>, IEEE MLSP’23 </p>
+</li>
 <li><p><a href="https://sites.google.com/view/cvpr2023red">Reverse Engineering of Deceptions: Foundations and Applications</a>, <i>CVPR&rsquo;23</i></p>
 </li>
 <li><p><a href="https://sites.google.com/view/aaai2023tutorial/home">Bi-level Optimization in Machine Learning: Foundations and Applications</a>, <i>AAAI&rsquo;23</i></p>
@@ -42,7 +44,10 @@
 </ul>
 <h2>Organized workshops </h2>
 <ul>
-<li><p><a href="https://sites.google.com/view/advml">Adversarial Learning Methods for Machine Learning and Data Mining</a></p>
+<li><p><a href="https://advml-frontier.github.io/">New Frontiers in Adversarial Machine Learning</a> (AdvML Frontiers@ICML), 2022-2023</p>
+</li>
+<li><p><a href="https://sites.google.com/view/advml">Adversarial Learning Methods for Machine Learning and Data Mining</a> (AdvML@KDD), 2019-2022
+</p>
 </li>
 </ul>
 </td>
