--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
-<li><p>J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b>, Model Sparsity Can Simplify Machine Unlearning, <i>NeurIPS&rsquo;23 (spotlight)</i></p>
+<li><p>J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2304.04934">Model Sparsity Can Simplify Machine Unlearning</a>, <i>NeurIPS&rsquo;23 (spotlight)</i></p>
 </li>
 <li><p>Y. Zhang*, Y. Zhang*, Aochuan Chen*, J. Jia, J. Liu, G. Liu, M. Hong, S. Chang, <b>S Liu</b>, <a href="https://arxiv.org/abs/2310.08782">Selectivity Drives Productivity: Efficient Dataset Pruning for Enhanced Transfer Learning</a>, <i>NeurIPS&rsquo;23</i></p>
 </li>
