--- a/index.html
+++ b/index.html
@@ -115,14 +115,15 @@ IEEE Signal Processing Magazine, 2020</p>
 </li>
 </ol>
 <h2>News</h2>
-<p>* <b>[New Preprints]</b> We are pleased to announce the release of the following papers on arXiv:<br /> [1] <a href="https://arxiv.org/abs/2310.11868">To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now</a>; [2] <a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a>; [3] <a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a>; [4] <a href="https://arxiv.org/pdf/2311.02373v1.pdf">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a>.</p>
+<p>* <b>[New Preprints]</b> We are pleased to announce the release of the following papers on arXiv:<br /> [1] <a href="https://arxiv.org/abs/2310.11868">To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now</a>;  [2] <a href="https://arxiv.org/pdf/2311.02373v1.pdf">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a>.</p>
+<p>* <i>Four</i> papers in <a href="https://iclr.cc/">ICLR’24</a>: (1) <a href="https://arxiv.org/pdf/2310.12508.pdf">Machine unlearning for safe image generation</a>; (2) <a href="https://arxiv.org/pdf/2310.02025.pdf">DeepZero: Training neural networks from scratch using only forward passes</a>; (3) Backdoor data sifting; (4) <a href="https://arxiv.org/pdf/2310.08381.pdf">Visual prompting automation</a></p>
 <p>* Tutorial on “Zeroth-Order Machine Learning: Fundamental Principles and Emerging Applications in Foundation Models” is accepted by ICASSP’24 and AAAI’24.</p>
 <p>* NeurIPS 2023: 3 Papers Accepted – 1 Spotlight and 2 Posters. Congratulations to Jignhan, Jiancheng, and Yuguang for their spotlight acceptance with 'Model Sparsity Simplifies Machine Unlearning.&rsquo; And kudos to Yihua, Yimeng, Aochuan, Jinghan, and Jiancheng for their poster acceptance with 'Selectivity Boosts Transfer Learning Efficiency.&rsquo;</p>
 <p>* Grateful to receive a grant from Army Research Office (ARO) as the PI.</p>
 <p>* Our paper on <a href="https://arxiv.org/abs/2308.10110v1">Adversarial Training for MoE</a> has been chosen for an Oral Presentation at <a href="https://iccv2023.thecvf.com">ICCV&rsquo;23</a>.</p>
 <p>* Grateful to receive a gift funding from Cisco Research as the PI.</p>
 <p>* Call for participation in <a href="https://advml-frontier.github.io">2nd AdvML-Frontiers Workshop</a>@ICML&rsquo;23.</p>
-<p>* One paper in <a href="https://iccv2023.thecvf.com">ICCV&rsquo;23</a> on Adversarial Robustness of Mixture-of-Experts.</p>
+<p>* <i>One</i> paper in <a href="https://iccv2023.thecvf.com">ICCV&rsquo;23</a> on Adversarial Robustness of Mixture-of-Experts.</p>
 <p>* Grateful to receive a CPS Medium Grant Award from NSF as a co-PI.</p>
 <p>* Slides of our CVPR&rsquo;23 tutorial on Reverse Engineering of Deceptions (RED) is now available at the tutorial page. <a href="https://sites.google.com/view/cvpr2023red">[link]</a></p>
 <p>* Our paper &ldquo;<a href="https://arxiv.org/pdf/2210.06284.pdf">Visual Prompting for Adversarial Robustness</a>&rdquo; received the <a href="https://drive.google.com/file/d/1PHjGXkCUSRJ3pQc4_8BGl_Y5aaRB-Nuw/view">Top 3% Paper Recognition</a> at ICASSP 2023. Congrats to Aochuan, Peter (internship at OPTML in 2022), Yuguang, and Pin-Yu (IBM Research)!</p>
@@ -170,7 +171,7 @@ IEEE Signal Processing Magazine, 2020</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-09 07:01:39 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-18 14:57:38 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
