--- a/publications.html
+++ b/publications.html
@@ -33,16 +33,16 @@
 <ol>
 <li><p>Y. Zhang*, J. Jia*, X. Chen, A. Chen, Y. Zhang, J. Liu, K. Ding, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2310.11868">To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now</a></p>
 </li>
-<li><p>C. Fan, J. Liu, Y. Zhang, D. Wei, E. Wong, <b>S. Liu</b> <a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a></p>
-</li>
-<li><p>A. Chen*, Y. Zhang*, J. Jia, J. Diffenderfer, J. Liu, K. Parasyris, Y. Zhang, Z. Zhang, B. Kailkhura, <b>S. Liu</b>, <a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a></p>
-</li>
 <li><p>Z. Pan*, Y. Yao*, G. Liu, B. Shen, H.V. Zhao, R.R. Kompella, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2311.02373v1.pdf">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a></p>
 </li>
 </ol>
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>C. Fan, J. Liu, Y. Zhang, D. Wei, E. Wong, <b>S. Liu</b> <a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a>, <i>ICLR&rsquo;24 (spotlight)</i></p>
+</li>
+<li><p>A. Chen*, Y. Zhang*, J. Jia, J. Diffenderfer, J. Liu, K. Parasyris, Y. Zhang, Z. Zhang, B. Kailkhura, <b>S. Liu</b>, <a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a>, <i>ICLR&rsquo;24</i></p>
+</li>
 <li><p>J. Jia*, J. Liu*, P. Ram, Y. Yao, G. Liu, Y. Liu, P. Sharma, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2304.04934">Model Sparsity Can Simplify Machine Unlearning</a>, <i>NeurIPS&rsquo;23 (spotlight)</i></p>
 </li>
 <li><p>Y. Zhang*, Y. Zhang*, Aochuan Chen*, J. Jia, J. Liu, G. Liu, M. Hong, S. Chang, <b>S Liu</b>, <a href="https://arxiv.org/abs/2310.08782">Selectivity Drives Productivity: Efficient Dataset Pruning for Enhanced Transfer Learning</a>, <i>NeurIPS&rsquo;23</i></p>
