--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ IEEE Signal Processing Magazine, 2020</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Tutorial “Machine Unlearning in Computer Vision: Foundations and Applications” is accepted for presentation by CVPR 2024. See you in Seattle!</p>
 <p>* <i>Four</i> papers in <a href="https://iclr.cc/">ICLR’24</a>: (1) <a href="https://arxiv.org/pdf/2310.12508.pdf">Machine unlearning for safe image generation</a>; (2) <a href="https://arxiv.org/pdf/2310.02025.pdf">DeepZero: Training neural networks from scratch using only forward passes</a>; (3) Backdoor data sifting; (4) <a href="https://arxiv.org/pdf/2310.08381.pdf">Visual prompting automation</a></p>
 <p>* <b>[New Preprints]</b> We are pleased to announce the release of the following papers on arXiv:<br /> [1] <a href="https://arxiv.org/abs/2310.11868">To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now</a>;<br />  [2] <a href="https://arxiv.org/pdf/2311.02373v1.pdf">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a>.</p>
 <p>* Tutorial on “Zeroth-Order Machine Learning: Fundamental Principles and Emerging Applications in Foundation Models” is accepted by ICASSP’24 and AAAI’24.</p>
@@ -171,7 +172,7 @@ IEEE Signal Processing Magazine, 2020</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-20 06:40:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-12 19:35:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
