--- a/publications.html
+++ b/publications.html
@@ -39,6 +39,8 @@
 </li>
 <li><p>Y. Zhang*, P. Li*, J. Hong*, J. Li, Y. Zhang, W. Zheng, P.-Y. Chen, J. D. Lee, W. Yin, M. Hong, Z. Wang, <b>S. Liu</b>, T. Chen, <a href="https://arxiv.org/abs/2402.11592">Revisiting Zeroth-Order Optimization for Memory-Efficient LLM Fine-Tuning: A Benchmark</a></p>
 </li>
+<li><p><b>S. Liu</b>, Y. Yao, J. Jia, S. Casper, N. Baracaldo, P. Hase, X. Xu, Y. Yao, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu, <a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for Large Language Models</a></p>
+</li>
 </ol>
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
