--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ IEEE Signal Processing Magazine, 2020</p>
 </li>
 </ol>
 <h2>News</h2>
-<p>* [New Preprints] We are pleased to announce the release of the following papers on arXiv:<br /> [1] <a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for Large Language Models</a>;<br />  [2] <a href="https://arxiv.org/abs/2402.11592">Revisiting Zeroth-Order Optimization for Memory-Efficient LLM Fine-Tuning: A Benchmark</a>; <br /> [3] <a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: A Stylized Image Dataset to Benchmark Machine Unlearning for Diffusion Models</a>.</p>
+<p>* [New Preprints] We are pleased to announce the release of the following papers on arXiv:<br /> [1] <a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for Large Language Models</a>;<br />  [2] <a href="https://arxiv.org/abs/2402.11592">Revisiting Zeroth-Order Optimization for Memory-Efficient LLM Fine-Tuning: A Benchmark</a>; <br /> [3] <a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: A Stylized Image Dataset to Benchmark Machine Unlearning for Diffusion Models</a>; <br /> [4] <a href="https://arxiv.org/abs/2403.07362">Challenging Forgets: Unveiling the Worst-Case Forget Sets in Machine Unlearning</a>.</p>
+<p>* We are thrilled to share that our research paper titled <a href="https://www.nowpublishers.com/article/Details/SEC-039">“Reverse Engineering Deceptions in Machine- and Human-Centric Attacks”</a> has been officially published in Foundations and Trends® in Privacy and Security.</p>
 <p>* [Launch of the MSU-UM-ARO <a href="https://project-aro.netlify.app/">Project Website</a>] The “Lifelong Multimodal Fusion by Cross Layer Distributed Optimization” project receives funding from the Army Research Office (ARO). </p>
 <p>* Tutorial “Machine Unlearning in Computer Vision: Foundations and Applications” is accepted for presentation by CVPR 2024. See you in Seattle!</p>
 <p>* <i>Four</i> papers in <a href="https://iclr.cc/">ICLR’24</a>: (1) <a href="https://arxiv.org/pdf/2310.12508.pdf">Machine unlearning for safe image generation</a>; (2) <a href="https://arxiv.org/pdf/2310.02025.pdf">DeepZero: Training neural networks from scratch using only forward passes</a>; (3) Backdoor data sifting; (4) <a href="https://arxiv.org/pdf/2310.08381.pdf">Visual prompting automation</a></p>
@@ -174,7 +175,7 @@ IEEE Signal Processing Magazine, 2020</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-05 10:38:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-28 14:56:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
