--- a/publications.html
+++ b/publications.html
@@ -41,10 +41,14 @@
 </li>
 <li><p><b>S. Liu</b>, Y. Yao, J. Jia, S. Casper, N. Baracaldo, P. Hase, X. Xu, Y. Yao, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu, <a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for Large Language Models</a></p>
 </li>
+<li><p>C. Fan, J. Liu, A. Hero, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2403.07362">Challenging Forgets: Unveiling the Worst-Case Forget Sets in Machine Unlearning</a>.</p>
+</li>
 </ol>
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>Y. Yao, X. Guo, V. Asnani, Y. Gong, J. Liu, X. Lin, X. Liu, <b>S. Liu</b>, <a href="https://www.nowpublishers.com/article/Details/SEC-039">Reverse Engineering Deceptions in Machine- and Human-Centric Attacks</a>, Foundations and Trends® in Privacy and Security.</p>
+</li>
 <li><p>C. Fan, J. Liu, Y. Zhang, D. Wei, E. Wong, <b>S. Liu</b> <a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a>, <i>ICLR&rsquo;24 (spotlight)</i></p>
 </li>
 <li><p>A. Chen*, Y. Zhang*, J. Jia, J. Diffenderfer, J. Liu, K. Parasyris, Y. Zhang, Z. Zhang, B. Kailkhura, <b>S. Liu</b>, <a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a>, <i>ICLR&rsquo;24</i></p>
