--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@
 </li>
 <li><p>Z. Pan*, Y. Yao*, G. Liu, B. Shen, H.V. Zhao, R.R. Kompella, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2311.02373v1.pdf">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a></p>
 </li>
-<li><p>Y. Zhang, Y. Zhang, Y. Yao, J. Jia, J. Liu, X. Liu, <b>S. Liu</b>,<a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: A Stylized Image Dataset to Benchmark Machine Unlearning for Diffusion Models</a></p>
+<li><p>Y. Zhang, Y. Zhang, Y. Yao, J. Jia, J. Liu, X. Liu, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: A Stylized Image Dataset to Benchmark Machine Unlearning for Diffusion Models</a></p>
 </li>
 <li><p>Y. Zhang*, P. Li*, J. Hong*, J. Li, Y. Zhang, W. Zheng, P.-Y. Chen, J. D. Lee, W. Yin, M. Hong, Z. Wang, <b>S. Liu</b>, T. Chen, <a href="https://arxiv.org/abs/2402.11592">Revisiting Zeroth-Order Optimization for Memory-Efficient LLM Fine-Tuning: A Benchmark</a></p>
 </li>
@@ -47,9 +47,7 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
-<li><p>Y. Yao, X. Guo, V. Asnani, Y. Gong, J. Liu, X. Lin, X. Liu, <b>S. Liu</b>, <a href="https://www.nowpublishers.com/article/Details/SEC-039">Reverse Engineering Deceptions in Machine- and Human-Centric Attacks</a>, Foundations and Trends® in Privacy and Security.</p>
-</li>
-<li><p>C. Fan, J. Liu, Y. Zhang, D. Wei, E. Wong, <b>S. Liu</b> <a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a>, <i>ICLR&rsquo;24 (spotlight)</i></p>
+<li><p>C. Fan, J. Liu, Y. Zhang, D. Wei, E. Wong, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a>, <i>ICLR&rsquo;24 (spotlight)</i></p>
 </li>
 <li><p>A. Chen*, Y. Zhang*, J. Jia, J. Diffenderfer, J. Liu, K. Parasyris, Y. Zhang, Z. Zhang, B. Kailkhura, <b>S. Liu</b>, <a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a>, <i>ICLR&rsquo;24</i></p>
 </li>
@@ -235,6 +233,10 @@
 </ol>
 <h2>Journal Papers </h2>
 <ol>
+<li><p>Y. Yao, X. Guo, V. Asnani, Y. Gong, J. Liu, X. Lin, X. Liu, <b>S. Liu</b>, <a href="http://dx.doi.org/10.1561/3300000039">Reverse Engineering of Deceptions on Machine- and Human-Centric Attacks</a>, Foundations and Trends® in Privacy and Security: Vol. 6: No. 2, pp 53-152, 2024</p>
+</li>
+<li><p>Y. Zhang, P. Khanduri, I. Tsaknakis, Y. Yao, M. Hong, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2308.00788.pdf">An introduction to bi-level optimization: Foundations and applications in signal processing and machine learning</a>, IEEE Signal Processing Magazine, 2024</p>
+</li>
 <li><p>S. Zhang, M. Wang, J. Xiong, <b>S. Liu</b>, P.-Y. Chen, <a href="https://ieeexplore.ieee.org/document/9152147">Improved Linear Convergence of Training CNNs With Generalizability Guarantees: A One-Hidden-Layer Case</a>, <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2020</p>
 </li>
 <li><p><b>S. Liu</b>, P.-Y. Chen, B. Kailkhura, G. Zhang, A. O. Hero, P. K. Varshney, <a href="https://arxiv.org/pdf/2006.06224.pdf">A Primer on Zeroth-Order Optimization in Signal Processing and Machine Learning</a>, <i>IEEE Signal Processing Magazine</i>, 2020</p>
