--- a/publications.html
+++ b/publications.html
@@ -233,6 +233,8 @@
 </ol>
 <h2>Journal Papers </h2>
 <ol>
+<li><p>Y. Zhang, P. Khanduri, I. Tsaknakis, Y. Yao, M. Hong, <b>S. Liu</b>, <a href="https://ieeexplore.ieee.org/document/10502023">An Introduction to Bilevel Optimization: Foundations and applications in signal processing and machine learning</a>, IEEE Signal Processing Magazine, vol. 41, no. 1, pp. 38-59, Jan. 2024</p>
+</li>
 <li><p>Y. Yao, X. Guo, V. Asnani, Y. Gong, J. Liu, X. Lin, X. Liu, <b>S. Liu</b>, <a href="http://dx.doi.org/10.1561/3300000039">Reverse Engineering of Deceptions on Machine- and Human-Centric Attacks</a>, Foundations and Trends® in Privacy and Security: Vol. 6: No. 2, pp 53-152, 2024</p>
 </li>
 <li><p>Y. Zhang, P. Khanduri, I. Tsaknakis, Y. Yao, M. Hong, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2308.00788.pdf">An introduction to bi-level optimization: Foundations and applications in signal processing and machine learning</a>, IEEE Signal Processing Magazine, 2024</p>
