--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,9 @@
 </li>
 <li><p><b>S. Liu</b>, Y. Yao, J. Jia, S. Casper, N. Baracaldo, P. Hase, X. Xu, Y. Yao, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu, <a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for Large Language Models</a></p>
 </li>
-<li><p>C. Fan, J. Liu, A. Hero, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2403.07362">Challenging Forgets: Unveiling the Worst-Case Forget Sets in Machine Unlearning</a>.</p>
+<li><p>C. Fan, J. Liu, A. Hero, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2403.07362">Challenging Forgets: Unveiling the Worst-Case Forget Sets in Machine Unlearning</a></p>
+</li>
+<li><p>J. Jia, Y. Zhang, Y. Zhang, J. Liu, B. Runwal, J. Diffenderfer, B. Kailkhura, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2404.18239">SOUL: Unlocking the Power of Second-Order Optimization for LLM Unlearning</a></p>
 </li>
 </ol>
 <h2>Selected Conference Papers</h2>
