--- a/publications.html
+++ b/publications.html
@@ -37,8 +37,6 @@
 </li>
 <li><p>Y. Zhang, Y. Zhang, Y. Yao, J. Jia, J. Liu, X. Liu, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: A Stylized Image Dataset to Benchmark Machine Unlearning for Diffusion Models</a></p>
 </li>
-<li><p>Y. Zhang*, P. Li*, J. Hong*, J. Li, Y. Zhang, W. Zheng, P.-Y. Chen, J. D. Lee, W. Yin, M. Hong, Z. Wang, <b>S. Liu</b>, T. Chen, <a href="https://arxiv.org/abs/2402.11592">Revisiting Zeroth-Order Optimization for Memory-Efficient LLM Fine-Tuning: A Benchmark</a></p>
-</li>
 <li><p><b>S. Liu</b>, Y. Yao, J. Jia, S. Casper, N. Baracaldo, P. Hase, X. Xu, Y. Yao, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu, <a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for Large Language Models</a></p>
 </li>
 <li><p>C. Fan, J. Liu, A. Hero, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2403.07362">Challenging Forgets: Unveiling the Worst-Case Forget Sets in Machine Unlearning</a></p>
@@ -49,6 +47,8 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>Y. Zhang*, P. Li*, J. Hong*, J. Li, Y. Zhang, W. Zheng, P.-Y. Chen, J. D. Lee, W. Yin, M. Hong, Z. Wang, <b>S. Liu</b>, T. Chen, <a href="https://arxiv.org/abs/2402.11592">Revisiting Zeroth-Order Optimization for Memory-Efficient LLM Fine-Tuning: A Benchmark</a>, <i>ICML&rsquo;24</i></p>
+</li>
 <li><p>C. Fan, J. Liu, Y. Zhang, D. Wei, E. Wong, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a>, <i>ICLR&rsquo;24 (spotlight)</i></p>
 </li>
 <li><p>A. Chen*, Y. Zhang*, J. Jia, J. Diffenderfer, J. Liu, K. Parasyris, Y. Zhang, Z. Zhang, B. Kailkhura, <b>S. Liu</b>, <a href="https://browse.arxiv.org/abs/2310.02025">DeepZero: Scaling up Zeroth-Order Optimization for Deep Model Training</a>, <i>ICLR&rsquo;24</i></p>
