--- a/publications.html
+++ b/publications.html
@@ -43,6 +43,8 @@
 </li>
 <li><p>J. Jia, Y. Zhang, Y. Zhang, J. Liu, B. Runwal, J. Diffenderfer, B. Kailkhura, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2404.18239">SOUL: Unlocking the Power of Second-Order Optimization for LLM Unlearning</a></p>
 </li>
+<li><p>Y. Zhang, X. Chen, J. Jia, Y. Zhang, C. Fan, J. Liu, M. Hong, K. Ding, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2405.15234">Defensive Unlearning with Adversarial Training for Robust Concept Erasure in Diffusion Models</a></p>
+</li>
 </ol>
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
