--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Interested candidates are strongly encouraged to contact me by <a href="mailto:l
 </div></div>
 <h2>Short Bio</h2>
 <p>Sijia Liu is currently an Assistant Professor at the CSE department of Michigan State University, an Affiliated Professor at IBM Research, and an MIT-IBM Watson AI Lab affiliated PI. He received the Ph.D. degree (with All-University Doctoral Prize) in Electrical and Computer Engineering from Syracuse University, NY, USA, in 2016. He was a Postdoctoral Research Fellow at the University of Michigan, Ann Arbor, in 2016-2017, and a Research Staff Member at the MIT-IBM Watson AI Lab in 2018-2020. His research interests include scalable and trustworthy AI, e.g. scalable optimization for deep models, machine unlearning for vision and language models, AI robustness, and data-model efficiency . He received the Best Student Paper Award at the 42nd IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP’16), and the Best Paper Runner-Up Award at the 38th Conference on Uncertainty in Artificial Intelligence (UAI’22). He has published over 70 papers at top-tier ML/CV conferences, such as NeurIPS, ICML, ICLR, CVPR, ICCV, ECCV, AISTATS, and AAAI (please refer to the <a href="https://csrankings.org">CS ranking</a>).</p>
-<p>He is currently a Senior Member of IEEE, a Technical Committee (TC) Member of Machine Learning for Signal Processing (MLSP) in the IEEE’s Signal Processing Society, and an Associate Editor of IEEE Transactions on Signal Processing and IEEE Transactions on Aerospace and Electronic Systems, respectively. He has organized a series of Trustworthy AI workshops in <a href="https://advml-frontier.github.io">ICML’22-23</a> and <a href="https://sites.google.com/view/advml">KDD’19-’22</a>, and provided tutorials on Trustworthy and Scalable ML in AAAI(’23, ’24), CVPR (’20, ’23, 24), ICASSP’24, MLSP’23, NeurIPS’22, and KDD’19.</p>
+<p>He is currently a Senior Member of IEEE, a Technical Committee (TC) Member of Machine Learning for Signal Processing (MLSP) in the IEEE’s Signal Processing Society, and an Associate Editor of IEEE Transactions on Signal Processing and IEEE Transactions on Aerospace and Electronic Systems, respectively. He has organized a series of Trustworthy AI workshops in <a href="https://advml-frontier.github.io">ICML’22-’23</a> and <a href="https://sites.google.com/view/advml">KDD’19-’22</a>, and provided tutorials on Trustworthy and Scalable ML in AAAI(’23, ’24), CVPR (’20, ’23, ’24), ICASSP’24, MLSP’23, NeurIPS’22, and KDD’19.</p>
 <h2>Research Interests</h2>
 <p>My research spans the areas of machine learning (ML)/deep learning (DL), optimization, computer vision, security, signal processing and data science, 
 with a focus on developing learning algorithms and theory, and robust and explainable artificial intelligence (AI). 
@@ -173,7 +173,7 @@ IEEE Signal Processing Magazine, 2020</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-28 14:12:31 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-28 14:15:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
