--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <img src="images/sijia.png" alt="Temp" width="130px" />&nbsp;</td>
 <td align="left"><p>Assistant Professor, <a href="https://www.cse.msu.edu/">Department of Computer Science and Engineering</a>,<br />
 <a href="https://msu.edu/">Michigan State University</a>, East Lansing, MI 48824<br />
-<a href="https://mitibmwatsonailab.mit.edu/people/sijia-liu/">Affiliated Professor@IBM Research MIT-IBM Watson AI Lab affiliated PI</a>, Cambridge, MA 02142<br /> 
+<a href="https://mitibmwatsonailab.mit.edu/people/sijia-liu/">Affiliated Professor@IBM Research, MIT-IBM Watson AI Lab affiliated PI</a>, Cambridge, MA 02142<br /> 
 
 Email: liusiji5@msu.edu <br />
 Twitter: @sijialiu17 <br />
@@ -173,7 +173,7 @@ IEEE Signal Processing Magazine, 2020</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-28 14:15:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-30 10:16:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
