--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ IEEE Signal Processing Magazine, 2020</p>
 </li>
 </ol>
 <h2>News</h2>
+<p>* Two papers in <a href="https://icml.cc/">ICML’24</a>: (1) <a href="https://www.arxiv.org/pdf/2402.11592">Benchmarking zeroth-order optimization for memory-efficient LLM fine-tuning</a>; (2) <a href="https://arxiv.org/pdf/2406.01977">Why does graph transformer generalize? A Theoretical Dive into Self-attention and Positional Encoding</a>.</p>
 <p>* [Feature Article@IEEE SPM] We are thrilled to share that our tutorial artile titled <a href="https://ieeexplore.ieee.org/document/10502023">“An Introduction to Bilevel Optimization: Foundations and applications in signal processing and machine learning”</a> has been published in the IEEE Signal Processing Magazine as a Feature Article.</p>
 <p>* [New Preprints] We are pleased to announce the release of the following papers on arXiv:<br /> [1] <a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for Large Language Models</a>;<br />  [2] <a href="https://arxiv.org/abs/2402.11592">Revisiting Zeroth-Order Optimization for Memory-Efficient LLM Fine-Tuning: A Benchmark</a>; <br /> [3] <a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: A Stylized Image Dataset to Benchmark Machine Unlearning for Diffusion Models</a>; <br /> [4] <a href="https://arxiv.org/abs/2403.07362">Challenging Forgets: Unveiling the Worst-Case Forget Sets in Machine Unlearning</a>; <br /> [5] <a href="https://arxiv.org/abs/2404.18239">SOUL: Unlocking the Power of Second-Order Optimization for LLM Unlearning</a>; <br /> [6] <a href="https://arxiv.org/abs/2405.15234">Defensive Unlearning with Adversarial Training for Robust Concept Erasure in Diffusion Models</a>.</p>
 <p>* We are thrilled to share that our research paper titled <a href="https://www.nowpublishers.com/article/Details/SEC-039">“Reverse Engineering Deceptions in Machine- and Human-Centric Attacks”</a> has been officially published in Foundations and Trends® in Privacy and Security.</p>
@@ -173,7 +174,7 @@ IEEE Signal Processing Magazine, 2020</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-30 10:16:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-10 13:00:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
