--- a/publications.html
+++ b/publications.html
@@ -31,15 +31,11 @@
 <h2>Preprints</h2>
 <p>* represents equal contribution</p>
 <ol>
-<li><p>Y. Zhang*, J. Jia*, X. Chen, A. Chen, Y. Zhang, J. Liu, K. Ding, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2310.11868">To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now</a></p>
-</li>
 <li><p>Z. Pan*, Y. Yao*, G. Liu, B. Shen, H.V. Zhao, R.R. Kompella, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2311.02373v1.pdf">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a></p>
 </li>
 <li><p>Y. Zhang, Y. Zhang, Y. Yao, J. Jia, J. Liu, X. Liu, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: A Stylized Image Dataset to Benchmark Machine Unlearning for Diffusion Models</a></p>
 </li>
 <li><p><b>S. Liu</b>, Y. Yao, J. Jia, S. Casper, N. Baracaldo, P. Hase, X. Xu, Y. Yao, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu, <a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for Large Language Models</a></p>
-</li>
-<li><p>C. Fan, J. Liu, A. Hero, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2403.07362">Challenging Forgets: Unveiling the Worst-Case Forget Sets in Machine Unlearning</a></p>
 </li>
 <li><p>J. Jia, Y. Zhang, Y. Zhang, J. Liu, B. Runwal, J. Diffenderfer, B. Kailkhura, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2404.18239">SOUL: Unlocking the Power of Second-Order Optimization for LLM Unlearning</a></p>
 </li>
@@ -49,6 +45,10 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>Y. Zhang*, J. Jia*, X. Chen, A. Chen, Y. Zhang, J. Liu, K. Ding, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2310.11868">To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now</a>, <i>ECCV&rsquo;24</i></p>
+</li>
+<li><p>C. Fan, J. Liu, A. Hero, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2403.07362">Challenging Forgets: Unveiling the Worst-Case Forget Sets in Machine Unlearning</a>, <i>ECCV&rsquo;24</i></p>
+</li>
 <li><p>Y. Zhang*, P. Li*, J. Hong*, J. Li, Y. Zhang, W. Zheng, P.-Y. Chen, J. D. Lee, W. Yin, M. Hong, Z. Wang, <b>S. Liu</b>, T. Chen, <a href="https://arxiv.org/abs/2402.11592">Revisiting Zeroth-Order Optimization for Memory-Efficient LLM Fine-Tuning: A Benchmark</a>, <i>ICML&rsquo;24</i></p>
 </li>
 <li><p>C. Fan, J. Liu, Y. Zhang, D. Wei, E. Wong, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2310.12508">SalUn: Empowering Machine Unlearning via Gradient-based Weight Saliency in Both Image Classification and Generation</a>, <i>ICLR&rsquo;24 (spotlight)</i></p>
