--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ IEEE Signal Processing Magazine, 2020</p>
 </li>
 </ol>
 <h2>news</h2>
+<p>* One paper in <a href="https://2024.emnlp.org">EMNLP’24: SOUL: Unlocking the Power of Second-Order Optimization for LLM Unlearning</a>.</p>
 <p>* Grateful to receive the Amazon Research Award for AI in Information Security&ndash;Spring 2024.</p>
 <p>* <a href="https://advml-frontier.github.io/">The 3rd AdvML-Frontiers Workshop</a> is now live and will be co-located at NeurIPS&rsquo;24! Submit your papers by Aug 30.</p>
 <p>* Dr. Liu has received the prestigious NSF Faculty Early Career Development (CAREER) Award.</p>
@@ -180,7 +181,7 @@ IEEE Signal Processing Magazine, 2020</p>
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA RED AIE Grant</a> as a Co-PI.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-20 01:18:06 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-20 12:04:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
