--- a/publications.html
+++ b/publications.html
@@ -31,20 +31,22 @@
 <h2>Preprints</h2>
 <p>* represents equal contribution</p>
 <ol>
-<li><p>Z. Pan*, Y. Yao*, G. Liu, B. Shen, H.V. Zhao, R.R. Kompella, <b>S. Liu</b>, <a href="https://arxiv.org/pdf/2311.02373v1.pdf">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a></p>
-</li>
-<li><p>Y. Zhang, Y. Zhang, Y. Yao, J. Jia, J. Liu, X. Liu, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: A Stylized Image Dataset to Benchmark Machine Unlearning for Diffusion Models</a></p>
-</li>
 <li><p><b>S. Liu</b>, Y. Yao, J. Jia, S. Casper, N. Baracaldo, P. Hase, X. Xu, Y. Yao, H. Li, K. R. Varshney, M. Bansal, S. Koyejo, Y. Liu, <a href="https://arxiv.org/abs/2402.08787">Rethinking Machine Unlearning for Large Language Models</a></p>
-</li>
-<li><p>J. Jia, Y. Zhang, Y. Zhang, J. Liu, B. Runwal, J. Diffenderfer, B. Kailkhura, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2404.18239">SOUL: Unlocking the Power of Second-Order Optimization for LLM Unlearning</a></p>
-</li>
-<li><p>Y. Zhang, X. Chen, J. Jia, Y. Zhang, C. Fan, J. Liu, M. Hong, K. Ding, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2405.15234">Defensive Unlearning with Adversarial Training for Robust Concept Erasure in Diffusion Models</a></p>
 </li>
 </ol>
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>Y. Zhang, C. Fan, Y. Zhang, Y. Yao, J. Jia, J. Liu, G. Zhang, G. Liu, R. R. Kompella, X. Liu, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2402.11846">UnlearnCanvas: Stylized Image Dataset for Enhanced Machine Unlearning Evaluation in Diffusion Models</a>, <i>NeurIPS&rsquo;24 Datasets and Benchmarks Track</i></p>
+</li>
+<li><p>Z. Pan, Y. Yao, G. Liu, B. Shen, H. V. Zhao, R. R. Kompella, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2311.02373">From Trojan Horses to Castle Walls: Unveiling Bilateral Backdoor Effects in Diffusion Models</a>, <i>NeurIPS&rsquo;24</i></p>
+</li>
+<li><p>J. Jia, J. Liu, Y. Zhang, P. Ram, N. Baracaldo, <b>S. Liu</b>, WAGLE: Strategic Weight Attribution for Effective and Modular Unlearning in Large Language Models, <i>NeurIPS&rsquo;24</i></p>
+</li>
+<li><p>Y. Zhang, X. Chen, J. Jia, Y. Zhang, C. Fan, J. Liu, M. Hong, K. Ding, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2405.15234">Defensive Unlearning with Adversarial Training for Robust Concept Erasure in Diffusion Models</a>, <i>NeurIPS&rsquo;24</i></p>
+</li>
+<li><p>J. Jia, Y. Zhang, Y. Zhang, J. Liu, B. Runwal, J. Diffenderfer, B. Kailkhura, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2404.18239">SOUL: Unlocking the Power of Second-order Optimization for LLM Unlearning</a>, <i>EMNLP&rsquo;24</i></p>
+</li>
 <li><p>Y. Zhang*, J. Jia*, X. Chen, A. Chen, Y. Zhang, J. Liu, K. Ding, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2310.11868">To Generate or Not? Safety-Driven Unlearned Diffusion Models Are Still Easy To Generate Unsafe Images &hellip; For Now</a>, <i>ECCV&rsquo;24</i></p>
 </li>
 <li><p>C. Fan, J. Liu, A. Hero, <b>S. Liu</b>, <a href="https://arxiv.org/abs/2403.07362">Challenging Forgets: Unveiling the Worst-Case Forget Sets in Machine Unlearning</a>, <i>ECCV&rsquo;24</i></p>
